static/css/main.css
html {
    /* base solarized colors */
    --yellow: #b58900;
    --yellowt: #b58900A0;
    --orange: #cb4b16;
    --oranget: #cb4b16A0;
    --red: #dc322f;
    --redt: #dc322fA0;
    --magenta: #d33682;
    --magentat: #d33682A0;
    --violet: #6c71c4;
    --violett: #6c71c4A0;
    --blue: #268bd2;
    --bluet: #268bd2A0;
    --cyan: #2aa198;
    --cyant: #2aa198A0;
    --green: #859900;
    --greent: #859900A0;
    --base03t: #002b36A0;
    --base03: #002b36;
    --base02: #073642;
    --base01: #586e75;
    --base00: #657b83;
    --base0: #839496;
    --base1: #93a1a1;
    --base2: #eee8d5;
    --base3: #fdf6e3;
    --base3t: #fdf6e370;
    --selectionb2: #eee8d5FE;
    --selectionb02: #073642FE;
    
    /* colors */
    --color: var(--base01);
    --background: var(--base3);
    --body-background: var(--base3t);
    --link: var(--base1);
    --link-shadow: var(--yellowt);
    --highlight: var(--base2);
    --selection: var(--selectionb2);
    
    /* sizes */
    --post-width: 540px;
    --header-background-height: 300px;
    --header-height: 240px;
    
    /* effects */
    --body-background-image: url('../image/scanlines-light.svg');
    --body-background-blend-mode: lighten;
    --header-background-filter: blur(5px) brightness(1.5);
    
    background: var(--background);
    color: var(--color);
    display: flex;
    flex-direction: column;
    font-family: Arial;
    height: 100%;
}

::selection {
    background-color: var(--selection);
}

a {
    color: var(--link);
}
a:hover {
    filter: brightness(1.2);
    text-shadow: 0.1rem 0.1rem 0.2rem var(--link-shadow);
}
a.blue {
    --link: var(--blue);
    --link-shadow: var(--bluet);
}
a.cyan {
    --link: var(--cyan);
    --link-shadow: var(--cyant);
}
a.red {
    --link: var(--red);
    --link-shadow: var(--redt);
}
a.green {
    --link: var(--green);
    --link-shadow: var(--greent);
}
a.orange {
    --link: var(--orange);
    --link-shadow: var(--oranget);
}
a.violet {
    --link: var(--violet);
    --link-shadow: var(--violett);
}
a.yellow {
    --link: var(--yellow);
    --link-shadow: var(--yellowt);
}

body {
    align-items: center;
    background-color: var(--body-background);
    background-image: var(--body-background-image);
    background-blend-mode: var(--body-background-blend-mode);
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    margin: 0;
}

footer {
    align-items: center;
    background-color: var(--background);
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem 0 1rem 0;
    width: 100%;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Courier Prime';
    margin: 0;
}

header {
    align-self: center;
    display: flex;
    height: var(--header-height);
    justify-content: space-between;
    padding: 0 0 1rem 0;
    width: var(--post-width);
}

header.mini {
    height: 60px;
}
header.mini .site-title {
    font-size: 1.4rem;
}
header.mini #header-background {
    height: 100px;
}
header.mini #header-metadata {
    align-items: center;
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
    justify-content: space-between;
    margin: 0;
    width: 100%;
}

main {
    align-items: center;
    background: linear-gradient(transparent, var(--background) 10rem);
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    gap: 3rem;
    padding-bottom: 1rem;
    width: 100%;
}

nav ul {
    display: flex;
    gap: 1rem;
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-transform: lowercase;
}

time {
    color: var(--link);
}

#header-background {
    animation: linear 10s infinite scanlines, 10s linear 0s infinite alternate wobble;
    background: url('../image/header.webp') top center repeat-y;
    filter: var(--header-background-filter);
    height: var(--header-background-height);
    left: 0;
    margin: auto;
    mask: url('../image/header.svg') center 80% / 100% no-repeat;
    position: absolute;
    right: 0;
    width: 820px;
    z-index: -1;
}

#header-metadata {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    margin-bottom: 1.2rem;
}

#header-metadata-wrapper {
    align-items: center;
    display: flex;
    justify-content: space-around;
    width: 100%;
}

.about {
    align-items: center;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    justify-content: center;
    width: var(--post-width);
}

.about-avatar {
    max-width: 128px;
}

.about-body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.about-header {
    display: flex;
    gap: 2rem;
}

.about-tagline {
    display: flex;
    flex-direction: column;
    font-family: 'Courier Prime';
    gap: 1rem;
}

.about-username {
    color: var(--yellow);
}

.avatar img {
    width: 100px;
    mask-image: radial-gradient(black, transparent 80%);
}

.footer-content {
    display: flex;
    padding: 1rem 0 1rem 0;
    width: var(--post-width);
}

.nav-item:nth-child(1n + 1) {
    --link: var(--cyan);
    --link-shadow: var(--cyant);
}
.nav-item:nth-child(1n + 2) {
    --link: var(--violet);
    --link-shadow: var(--violett);
}
.nav-item:nth-child(1n + 3) {
    --link: var(--yellow);
    --link-shadow: var(--yellowt);
}
.nav-item:nth-child(1n + 4) {
    --link: var(--orange);
    --link-shadow: var(--oranget);
}
.nav-item:nth-child(1n + 5) {
    --link: var(--green);
    --link-shadow: var(--greent);
}
.nav-item:nth-child(1n + 6) {
    --link: var(--magenta);
    --link-shadow: var(--magentat);
}

.page {
  width: var(--post-width);
}

.page-end {
    align-items: center;
    border-top: 0.1rem solid var(--orange);
    display: flex;
    flex-direction: column;
    justify-content: center;
    mask-image: linear-gradient(to left, transparent 10%, black 20%, black 80%, transparent 90%);
    width: 100%;
}

.pagination {
    align-items: center;
    display: flex;
    justify-content: center;
    width: var(--post-width);
}

.photogrid {
    display: flex;
    flex-wrap: wrap;
    flex-grow: 1;
    justify-content: space-evenly;
}
    .photogrid img {
        background: repeating-conic-gradient(gray 0% 25%, transparent 0% 50%) 50% / 20px 20px;
        box-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.2);
        border: 0.1rem solid var(--highlight);
        margin: 1rem;
        max-width: 16rem;
        transition: transform .2s;
    }
    .photogrid a img:hover {
        border-color: var(--yellow);
        box-shadow: 0.2rem 0.2rem 0.2rem var(--yellowt);
    }
.post {
    display: flex;
    flex-direction: column;
    margin: var(--post-margin-top) 0 var(--post-margin-bottom) 0;
    width: var(--post-width);
}
.post::after {
    color: var(--link);
    content: '-rwx---r--';
    font-family: 'Courier Prime';
    font-size: 0.8rem;
    text-align: left;
}
.post a {
    color: var(--link);
}
.post a:hover {
    color: var(--yellow);
    filter: none;
    text-shadow: none;
}
.post .single {
    margin: 2rem 0 2rem 0;
}
.post-content>p {
    margin-block-start: 0.2rem;
}
.post-content p:last-child {
    margin-bottom: 0;
}
.post-content video {
  height: auto;
  max-width: var(--post-width);
}
.post-content img {
  height: auto;
  max-width: var(--post-width);
}
.post-header {
    font-family: 'Courier Prime';
    font-weight: bold;
    margin-bottom: var(--post-header-margin-bottom);
}
.single-margins {
    --post-margin-top: 2rem;
    --post-margin-bottom: 2rem;
    --post-header-margin-bottom: 1rem;
}
.post-title {
    color: var(--yellow);
}
.site-title {
    font-family: 'Courier Prime';
    font-weight: normal;
    font-size: 3rem;
    margin: 0;
    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
    white-space: nowrap;
}
.site-title a {
    color: var(--red);
    
    &:after {
        animation: change-title 40s linear infinite;
        content: "-rwxrwxrwx"
    }
}

.social ul {
  display: flex;
  gap: 1rem;
  list-style-type: none;
  margin: 0.4rem 0 0 0;
  padding: 0;
}

@media (prefers-color-scheme: dark) {
    html {
        --color: var(--base1);
        --background: var(--base03);
        --body-background: var(--base03t);
        --link: var(--base01);
        --highlight: var(--base02);
        --body-background-image: url('../image/scanlines-dark.svg');
        --body-background-blend-mode: darken;
        --header-background-filter: blur(5px) brightness(0.9);
        --selection: var(--selectionb02);
    }

    .site-title a {
        animation: site-title-crt-flicker 5s steps(1, end) infinite;
    }

    .site-title a:hover {
        text-shadow: 0.4rem 0.4rem 0.6rem var(--red);
        animation: none;
    }
}

